--- a/ui/appui-react/src/appui-react/toolbar/group/ToolGroup.scss
+++ b/ui/appui-react/src/appui-react/toolbar/group/ToolGroup.scss
@@ -3,8 +3,16 @@
  * See LICENSE.md in the project root for license terms and full copyright notice.
  *--------------------------------------------------------------------------------------------*/
 .uifw-toolbar-group-toolGroup_container {
+  flex: 1 1 100%;
+  min-width: 0;
+
   &.uifw-vertical {
     height: 100%;
+  }
+
+  &.uifw-end {
+    display: flex;
+    justify-content: flex-end;
   }
 }
 
